# markdownlint-rs

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-hooks.yaml  AIDEV.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FORMAT_SPEC.md  IMPROVEMENTS.md  README.md  mdlint.default.toml  mdlint.toml  mdlint.toml.example  mise.toml  prek.toml  release.toml  test_md042
.github/: CONTRIBUTING.md  WORKFLOWS.md  release-template.md
.github/workflows/: benchmarks.yml  build-binaries.yml  build-npm.yml  build-python.yml  build.yml  ci.yml  dependencies.yml  lint.yml  publish-container.yml  publish-crates-io.yml  publish-npm.yml  publish-python.yml  release.yml  tag.yml
memory/: MEMORY.md
npm/: README.md  package.json
python/: README.md  hatch_build.py  pyproject.toml
python/mdlint/: __main__.py
src/: args.rs  error.rs  lib.rs  main.rs  types.rs
src/config/: loader.rs  merge.rs  mod.rs  types.rs
src/fix/: fixer.rs
src/format/: default.rs  json.rs  junit.rs  mod.rs  sarif.rs
src/formatter/: mod.rs
src/glob/: matcher.rs  mod.rs  walker.rs
src/lint/: engine.rs  mod.rs  result.rs  rule.rs
src/markdown/: front_matter.rs  mod.rs  parser.rs
tests/: README.md  compatibility.rs  formatter.rs  formatter_proptest.proptest-regressions  formatter_proptest.rs  integration.rs  proptest.proptest-regressions  proptest.rs
tests/fixtures/: all_rules.md  md001_violations.md  md003_violations.md  md004_violations.md  md005_violations.md  md006.md  md007_violations.md  md009_violations.md  md010_violations.md  md011_violations.md  md012_violations.md  md013_violations.md  md014_violations.md  md018_violations.md  md019_violations.md  md020_violations.md  md021_violations.md  md022_violations.md  md023_violations.md  md024_violations.md  md025_violations.md  md026_violations.md  md027_violations.md  md028_violations.md  md029_violations.md  md030_violations.md  md031_violations.md  md032_violations.md  md033_violations.md  md034_violations.md  md035_violations.md  (+27 more)
(+58 files in other folders)
