[package]
name = "markdownlint-rs"
version = "0.2.3"
edition = "2024"
authors = ["Simon Swanson"]
description = "A fast, flexible, configuration-based command-line interface for linting Markdown/CommonMark files"
license = "MIT"
repository = "https://github.com/swanysimon/markdownlint-rs"
keywords = ["markdown", "lint", "cli", "formatter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mdlint"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonc-parser = { version = "0.23", features = ["serde"] }

# Globbing and file traversal
ignore = "0.4"
globset = "0.4"

# Markdown parsing
pulldown-cmark = "0.9"

# Pattern matching
regex = "1.10"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
