[package]
name = "markdownlint-rs"
version = "0.2.8"
edition = "2024"
authors = ["Simon Swanson"]
description = "A fast, flexible, configuration-based command-line interface for linting Markdown/CommonMark files"
license = "MIT"
repository = "https://github.com/swanysimon/markdownlint-rs"
keywords = ["markdown", "lint", "cli", "formatter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mdlint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
jsonc-parser = { version = "0.29.0", features = ["serde"] }
pulldown-cmark = "0.13.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.14"

[features]
compatibility-tests = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
